--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,19 +4,15 @@
 <form>
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <input type="email" class="form-control email-field" id="exampleInputEmail1" aria-describedby="emailHelp">
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <input type="password" class="form-control password-field" id="exampleInputPassword1">
   </div>
   <div class="d-grid gap-2"> 
-  <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
-  <button type="submit" class="btn btn-primary btn-lg">Login</button>
+  <button type="submit" class="btn btn-primary btn-lg signup-form">Sign Up</button>
+  <button type="submit" class="btn btn-primary btn-lg login-form">Login</button>
   </div>
 </form>
 </section>
