this commit adds missing associations in the models/index.js file, comments out the withAuth middleware functionality, and adding content to the homepage.hbs file

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,11 @@
 {{#each posts as |post| }}
 
-{{!-- partial for the post-info that will place all the content in the partial here --}}
-{{> post-info post }}
+<a href="/posts/{{post.id}}">{{post.post_title}}</a>
+
+<div>
+    <p>
+        {{post.content}}
+    </p>
 </div>
 
 {{else}}
